# auralflow

./: .gitignore  .npmrc  PROJECT_OVERVIEW.md  QUICK_START.md  README.md  REFACTOR_SUMMARY.md  fix-dependencies.ps1  index.html  package.json  pnpm-lock.yaml  start-dev.bat  start.bat  tsconfig.json  vite.config.ts
docs/: CUSTOM_SOURCE_AND_GATEWAY_DESIGN.md
scripts/: run-regression-tests.mjs  test-builtin-playback-timeout.mjs  test-custom-source-playback.mjs  test-custom-source-update.mjs  test-daily-favorites-loading-ui.mjs  test-desktop-lyric.mjs  test-detail-play-loading-ui.mjs  test-folia-borrowed-features.mjs  test-lyrics.mjs  test-personal-fm.mjs  test-playback-snapshot.mjs  test-player-loading-guard.mjs  test-playlist-play-loading-ui.mjs  test-qq-search.mjs  test-recent-played.mjs  test-remote-playlist-routing.mjs  test-search-playlist-collect.mjs  test-share-link.mjs  test-stability-audit.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep
src-tauri/src/: commands.rs  config.rs  gateway.rs  library.rs  lyric_window.rs  main.rs  models.rs  tray.rs
src/components/: CursorEffect.tsx  CustomSourceUpdateModal.tsx  DeepLinkHandler.tsx  DownloadQualityButton.tsx  IconButton.tsx  ImmersiveLyricsOverlay.tsx  MetadataEditModal.tsx  MusicCard.tsx  PactModal.tsx  PlayerBar.tsx  README.md  SectionHeader.tsx  SongAddMenuButton.tsx  SoundEffectPanel.tsx  UpdateModal.tsx  VirtualList.tsx  WyCookieLoginModal.tsx
src/hooks/: useInterpolatedPlaybackProgress.ts  useKeyboardShortcuts.ts  useLyricAutoScroll.ts  useLyrics.ts  useNativeControls.ts
src/lib/: README.md  utils.ts
src/services/: README.md  biliAccountService.ts  builtinMusicApiClient.ts  builtinMusicApiModel.ts  qrCode.ts  (+16 more)
(+88 files in other folders)
